
2008-05-20  Lynn Garren

	* revamp Units design completely
	Replace MomentumUnits.h and PositionUnits.h with Units.h
	Allowed unit designations are GEV, MEV, MM, and CM
	
	* configure.ac: User MUST specify both --with-momentum_units=XX
	and --with-length_units=YY.  There are no defaults.
	
	* HepMC/GenEvent.h: unit data members are now enums

2008-05-12  Lynn Garren

	* HepMC/Pdfinfo.h: Input parton flavour codes id1 and id2 are expected 
	to obey the PDG code conventions, especially g = 21.

  --------------------------  HepMC-2.04.00.beta  --------------------------

2008-05-05  Lynn Garren

	* configure.ac: use separate makefiles (VCMakefile.in) for Visual C++
	The custom makefiles are invoked by default when using Visual C++.
	* doc: Stop building postscript copies of the manuals, just 
	build and distribute PDF copies of the manuals.

2008-04-29  Lynn Garren

	* remove deprecated IO_ExtendedAscii

2008-04-25  Lynn Garren

	* cleanup examples: combine example_MyPythia.cc, 
	example_MyPythiaRead.cc, example_MyPythiaWithEventSelection.cc, 
	example_PythiaParticle.cc, and example_ReadMyPythia.cc into one example with multiple subsets.
	* add tests to list of examples in the reference manual

2008-04-23  Lynn Garren

	* src/GenVertex.cc: fix bug in edge_iterator operator++
        * src/IO_Ascii.cc: fix for VC9
        * src/IO_ExtendedAscii.cc: fix for VC9
        * src/IO_AsciiParticle.cc: fix for VC9

2008-04-18  Lynn Garren

	* HepMC/GenEvent.h: minor bug fix for gcc 4.3.0
	* HepMC/IO_ExtendedAscii.h: minor bug fix for gcc 4.3.0
	* HepMC/IO_GenEvent.h: minor bug fix for gcc 4.3.0
	* src/IO_ExtendedAscii.cc: minor bug fix for gcc 4.3.0
	* src/IO_GenEvent.cc: minor bug fix for gcc 4.3.0

2008-04-18  Lynn Garren

	* ReadMe.cygwin: changing cygwin directions for new versions of VC

	* HepMC/MomentumUnits.h: enum HepMCmomentumUnits{ UNKNOWN = 0, MEV, GEV };
	Recommended usage: MomentumUnits::GEV