@@ -45,7 +45,7 @@ int main() {
 	call_pyhepc( 1 );
 	HepMC::GenEvent* evt = hepevtio.read_next_event();
 	// pythia uses GeV and mm
-	evt->set_units( HepMC::MomentumUnits::GEV, HepMC::PositionUnits::MM);
+	evt->use_units( HepMC::Units::GEV, HepMC::Units::MM);
 	// set number of multi parton interactions
 	evt->set_mpi( pypars.msti[31-1] );
 	//
